<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fasttouch.MainActivity" >

    <TextView
        android:id="@+id/textViewFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewGameOver"
        android:layout_below="@+id/textViewGameOver"
        android:layout_marginTop="19dp"
        android:text="@string/final_score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewFinalScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewFinalScore"
        android:layout_toRightOf="@+id/textViewGameOver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewFinalScore"
        android:layout_below="@+id/textViewFinalScore"
        android:layout_marginTop="14dp"
        android:text="@string/higscore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewHighScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewHighScore"
        android:layout_alignBottom="@+id/textViewHighScore"
        android:layout_toRightOf="@+id/textViewGameOver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageViewRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="280dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/repeat" 
        android:contentDescription="@string/game_repeat_description"
        android:onClick="restart" />

</RelativeLayout>
